fix overflow on iphone 6

--- a/css/creative.css
+++ b/css/creative.css
@@ -250,6 +250,14 @@ aside {
         padding-top: 10px;
         padding-bottom: 10px;
     }
+
+    .section-heading {
+        font-size: 24px;
+    }
+
+    h3 {
+      font-size: 20px;
+    }
 }
 
 header {
